--- a/blog/templates/detail.html
+++ b/blog/templates/detail.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Post Details|{{post.title}}</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block title %}Post Details|{{ post.title }}{% endblock %}
+
+{% block content %}
 <div>
     <h1>{{post.title}}</h1>
     <p>{{post.slug}}</p>
@@ -15,5 +13,4 @@
     <p>{{post.status}}</p>
     <p>{{post.auther}}</p>
 </div>
-</body>
-</html>
+{% endblock %}
