--- a/blog/templates/list.html
+++ b/blog/templates/list.html
@@ -9,5 +9,5 @@
     <p>{{ post.body|truncatewords:30|linebreaks }}</p>
 {% endfor %}
 
-{% include 'pagination.html' %}
+{% include 'pagination.html' with page=page_obj %}
 {% endblock %}
