--- a/blog/templates/detail.html
+++ b/blog/templates/detail.html
@@ -8,4 +8,15 @@
     <p class="date">Published {{ post.published_at|date:"M d, Y" }} by {{ post.author }}</p>
     <p>{{ post.body|linebreaks }}</p>
 {% endfor %}
+<h2>Comments ({{ total_comments }})</h2>
+{% if comments %}
+    <ul>
+        {% for comment in comments %}
+            <li>{{ comment.name }} - {{ comment.created_at|date:"M d, Y" }} - {{ comment.body }}</li>
+        {% endfor %}
+    </ul>
+{% else %}
+    <p>No comments yet. Be the first to comment!</p>
+{% endif %}
+{% include "blog/post/includes/comment_form.html" %}
 {% endblock %}
