--- a/blog/templates/list.html
+++ b/blog/templates/list.html
@@ -3,11 +3,18 @@
 {% block title %}Posts{% endblock %}
 
 {% block content %}
+{% if tag %}
+<h2>Posts tagged with "{{ tag.name }}"</h2>
+{% endif %}
 {% for post in posts %}
     <h2><a href="{{ post.get_absolute_url }}">{{ post.id }}</a></h2>
-    <p class="tags">Tags: {{ post.tags.all|join:", " }}</p>
-    <p class="date">Published {{ post.published_at|date:"M d, Y" }} by {{ post.author }}</p>
-    <p>{{ post.body|truncatewords:30|linebreaks }}</p>
+    <p class="tags">
+        Tags:
+        {% for tag in post.tags.all %}
+            <a href="{% url 'blog:post_list_by_tag' tag.slug %}">{{ tag.name }}</a>
+            {% if not forloop.last %}, {% endif %}
+        {% endfor %}
+    </p>
 {% endfor %}
 
 {% include 'pagination.html' with page=page_obj %}
