--- a/blog/templates/detail.html
+++ b/blog/templates/detail.html
@@ -19,4 +19,12 @@
     <p>No comments yet. Be the first to comment!</p>
 {% endif %}
 {% include "blog/post/includes/comment_form.html" %}
+<h2>Similar posts</h2>
+{% for post in similar_posts %}
+<p>
+<a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
+</p>
+{% empty %}
+<p>There are no similar posts yet.</p>
+{% endfor %}
 {% endblock %}
