--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -1,3 +1,4 @@
+{% load blog_tags %}
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -8,12 +9,22 @@
     <link rel="stylesheet" href="{% static '/css/blog.css' %}">
 </head>
 <body>
-    <div id="content">
-        {% block content %}{% endblock %}
-    </div>
-    <div id="sidebar">
-        <h2>Django Blog</h2>
-        <p>Testing to learn django</p>
-    </div>
+<div id="content">
+    {% block content %}{% endblock %}
+
+    <h3>Most commented posts</h3>
+    {% get_most_commented_posts as most_commented_posts %}
+    <ul>
+        {% for post in most_commented_posts %}
+        <li>
+            <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
+        </li>
+        {% endfor %}
+    </ul>
+</div>
+<div id="sidebar">
+    <h2>Django Blog</h2>
+    <p>Testing to learn django</p>
+</div>
 </body>
 </html>
