--- a/blog/templates/detail.html
+++ b/blog/templates/detail.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load blog_tags %}
 
 {% block title %}Post's title{% endblock %}
 
@@ -6,7 +7,7 @@
 {% for post in posts %}
     <h1>{{ post.title }}</h1>
     <p class="date">Published {{ post.published_at|date:"M d, Y" }} by {{ post.author }}</p>
-    <p>{{ post.body|linebreaks }}</p>
+    <p>{{ post.body|markdown|linebreaks }}</p>
 {% endfor %}
 <h2>Comments ({{ total_comments }})</h2>
 {% if comments %}
