--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -24,6 +24,7 @@
 <div id="sidebar">
     <h2>Django Blog</h2>
     <p>Testing to learn django</p>
+     <a href="{% url 'latest_posts_feed' %}">RSS feed</a>
 </div>
 </body>
 </html>
